add gradle resourcePrefix

--- a/mockinizer/src/main/res/values/strings.xml
+++ b/mockinizer/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Mockinizer</string>
+    <string name="mockinizer_app_name">Mockinizer</string>
 </resources>
