--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Mockinizer</string>
+    <string name="app_name">Mockinizer Demo</string>
     <string name="check_logcat">Check Logcat!</string>
 </resources>
